Thu Apr  8 19:17:27 UTC 2010  Mike Martinez  <martinez_m@ociweb.com>

        * performance-tests/Bench/bin/reduce-latency-data.pl:

          Added plot data for quantile charts to the output data.

Tue Apr 06 18:45:55 UTC 2010  Trevor Fields  <fields_t@ociweb.com>

        * bin/PerlDDS/Cross_Sync_Common.pm:

          Fix typo and separated output of failing to read file and
          failing to find the required instance.

        * performance-tests/Bench/bin/run_test:

          Improved handling of the Info Repo.

        * performance-tests/Bench/tests/latency/run_test.pl:
        * performance-tests/Bench/tests/thru/run_test.pl:

          Fixed issues with running.

Thu Apr 01 22:36:25 UTC 2010  Trevor Fields  <fields_t@ociweb.com>

        * performance-tests/Bench/bin/extract-throughput.pl:
        * performance-tests/Bench/tests/latency/run_test.pl:
        * performance-tests/Bench/tests/thru/run_test.pl:
        * performance-tests/Bench/tests/thru/test-commands.txt:
        * performance-tests/Bench/tests/thru/test_list.txt:

          Minor fixes to run tests and data extraction script.

Thu Apr  1 15:20:09 UTC 2010  Mike Martinez  <martinez_m@ociweb.com>

        * performance-tests/Bench/bin/run_test:

          Explicitly search the environment PATH variable for the
          repository and test commands to execute.

Wed Mar 31 23:59:23 UTC 2010  Trevor Fields  <fields_t@ociweb.com>

        * bin/performance_tests.lst:
        * performance-tests/Bench/bin/extract-latency.pl:
        * performance-tests/Bench/bin/extract-throughput.pl:
        * performance-tests/Bench/bin/plot-throughput.gp:
        * performance-tests/Bench/bin/reduce-latency-data.pl:
        * performance-tests/Bench/tests/latency/run_test.pl:
        * performance-tests/Bench/tests/latency/test_list.txt:
        * performance-tests/Bench/tests/thru/test-commands.txt:
        * performance-tests/Bench/tools/convert-all: