@@ -1,3 +1,10 @@
+Fri Apr 09 18:37:50 UTC 2010  Trevor Fields  <fields_t@ociweb.com>
+
+        * performance-tests/Bench/tests/latency/run_test.pl:
+        * performance-tests/Bench/tests/thru/run_test.pl:
+
+          Added some basic POD documentation.
+
 Thu Apr  8 19:17:27 UTC 2010  Mike Martinez  <martinez_m@ociweb.com>
 
         * performance-tests/Bench/bin/reduce-latency-data.pl:
